# aifh

./: .gitattributes  .gitignore  README.md  README.txt
help/: README.md
math/: README.md  Untitled.ipynb
output/: iris.csv
vol1/: README.md  README.txt  chart.R
vol1/c-examples/: AIFH-VOL1.c  AIFH-VOL1.cpp  AIFH-VOL1.sln  AIFH-VOL1.vcxproj  AIFH-VOL1.vcxproj.filters  CMakeLists.txt  Data.c  Distance.c  Equilateral.c  Error.c  ExampleAnalyze.c  ExampleAnnealKnapsack.c  ExampleAnnealTSP.c  ExampleDistance.c  ExampleError.c  ExampleGLM.c  ExampleKMeans.c  ExampleLearnIris.c  ExampleLearnIrisAnneal.c  ExampleLearnIrisClimb.c  ExampleLearnIrisNelderMead.c  ExampleLearnPoly.c  ExampleLearnXOR.c  ExampleLinearRegression.c  ExampleNormalize.c  ExamplePI.c  ExampleRandom.c  ExampleReadCSV.c  ExampleSimpleNormalize.c  ExampleTest.c  ExampleUtil.c  KMeans.c  Normalize.c  RBF.c  RBFNetwork.c  README.md  README.txt  Random.c  ReadMe.txt  Regression.c  (+12 more)
vol1/csharp-examples/: AIFH-Vol1.sln  README.md  README.txt
vol1/csharp-examples/AIFH-Vol1/: AIFH-Vol1.csproj  ExampleHolder.cs  Program.cs  packages.config
vol1/csharp-examples/AIFH-Vol1-Core/: AIFH-Vol1-Core.csproj  packages.config
vol1/csharp-examples/AIFH-Vol1-OCR/: AIFH-Vol1-OCR.csproj  DownSample.cs  OCRForm.cs  OCRForm.designer.cs  Program.cs
vol1/csharp-examples/AIFH-Vol1-Random/: AIFH-Vol1-Random.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
vol1/csharp-examples/UnitTests/: UnitTests.csproj
vol1/haskell-examples/: .gitignore  LICENSE.txt  aifh1.cabal
vol1/haskell-examples/data/: abalone.csv
vol1/haskell-examples/exe/: distance.hs  kmeans.hs  normalizecsv.hs  ocr.hs  pi.hs  random.hs  runcsv.hs
vol1/haskell-examples/src/AI/AIFH/: Cluster.hs  Normalize.hs  Utils.hs
vol1/haskell-examples/src/AI/AIFH/DataSets/: Iris.hs
vol1/haskell-examples/test/: aifh-test.hs
vol1/haskell-examples/test/AI/AIFH/: ClusterTest.hs  NormalizeTests.hs  UtilsTest.hs
vol1/haskell-examples/ui/: ocr.css  ocr.xml
vol1/java-examples/: .gitignore  README.md  README.txt  build.gradle
vol1/python-examples/: README.md  Watchfile
vol1/python-examples/examples/: example_anneal_disc_knapsack.py  example_anneal_disc_tsp.py  example_anneal_iris.py  example_climb_xor.py  example_distance.py  example_error.py  example_kmeans.py  example_linear_regression.py  example_logit.py  example_nm_iris.py  example_nm_xor.py  example_normalize.py  example_ocr.py  example_rand_polynomial.py  example_rand_xor.py  example_random.py  example_readcsv.py
vol1/python-examples/lib/: __init__.py
vol1/python-examples/test/: test_chebyshev_distance.py  test_distance.py  test_euclidean_distance.py  test_manhattan_distance.py  test_suite.py
vol1/r-examples/: README.md  README.txt
vol1/r-examples/ch1/: readCSV.R
vol1/r-examples/ch10/: multiLinearRegression.R  tempConv.R
vol1/r-examples/ch2/: denormalizeCSV.R  normalizeCSV.R
vol1/r-examples/ch3/: distance.R
vol1/r-examples/ch4/: inscribed_circle.r  random.R
vol1/r-examples/ch5/: kmeans.R
vol1/r-examples/ch6/: errorcalc.R
vol1/r-examples/ch7/: learnPoly.R
vol1/r-examples/ch8/: learnPolyAnneal.R  learnPolyNM.R
vol1/r-examples/ch9/: knapsack.R  tsp.R
vol1/scala-examples/: .gitignore  README.txt  build.sbt
vol1/scala-examples/project/: plugins.sbt
vol2/: README.md
vol2/vol2-csharp-examples/: AIFH-Vol2.sln  README.md  README.txt
vol2/vol2-csharp-examples/AIFH-Vol2-Capstone-Plants/: AIFH-Vol2-Capstone-Plants.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
vol2/vol2-csharp-examples/AIFH-Vol2-Conway/: App.xaml  App.xaml.cs  (+3 more)
vol2/vol2-java-examples/: README.md  build.gradle
vol2/vol2-python-examples/: README.md  README.txt
vol2/vol2-scala-examples/: README.txt  build.sbt
vol3/: README.md  README.txt  aifh_vol3.rmd
vol3/vol3-csharp-examples/: AIFH-Vol3.sln  README.md
vol3/vol3-dl4j-examples/: README.md  build.gradle
vol3/vol3-java-examples/: README.md  build.gradle
vol3/vol3-python-examples/: README.md
(+1485 files in other folders)
